add_executable (test1 test1.cpp)
target_link_libraries(test1 http_parser)
add_executable (test2 test2.cpp)
target_link_libraries(test2 http_parser)
add_executable (test3 test3.cpp)
target_link_libraries(test3 http_parser)
add_executable (test4 test4.cpp)
target_link_libraries(test4 http_parser)
add_executable (test5 test5.cpp)
target_link_libraries(test5 http_parser)
